src/V3d/V3d_CircularGrid.hxx
@@ -63,11 +63,17 @@ private:
 
 private:
 
+  //! Custom Graphic3d_Structure implementation.
+  class CircularGridStructure;
+
+private:
+
   Handle(Graphic3d_Structure) myStructure;
   Handle(Graphic3d_Group) myGroup;
   gp_Ax3 myCurViewPlane;
   V3d_ViewerPointer myViewer;
   Standard_Boolean myCurAreDefined;
+  Standard_Boolean myToComputePrs;
   Aspect_GridDrawMode myCurDrawMode;
   Standard_Real myCurXo;
   Standard_Real myCurYo;
